# nepi_engine

./: .gitmodules  CLAUDE.md  README.md
nepi_api/: CMakeLists.txt  README.md  package.xml  setup.py
nepi_api/include/: api_interface.h  save_data_interface.h
nepi_api/scripts/: nepi_ai_detector_img_pub_node.py  nepi_ai_tracking_img_pub_node.py  nepi_depth_map_image_pub.py  nepi_depth_map_img_pub_node.py  nepi_pointcloud_img_pub_node.py
nepi_api/src/: save_data_interface.cpp
nepi_api/src/nepi_api/: ai_if_detector.py  ai_model_if.py  connect_ai_if_detector.py  connect_data_if.py  connect_data_if_image.py  data_if.py  (+46 more)
nepi_env/: CMakeLists.txt  LICENSE  README.md  fw_version.txt  package.xml  setup.py
nepi_env/etc/: fw_version.txt  install_startup_services.sh  roslaunch.service  roslaunch.sh  sys_env.bash  tune_ethernet_interfaces.py
nepi_env/launch/: nepi_base.launch  nepi_base.launch.num_factory  nepi_s2x_son603.launch  nepi_s2x_sxn203.launch
nepi_env/msg/: MatrixF32.msg  NodeOutput.msg  WakeUpEvent.msg
nepi_env/scripts/: fake_gps.py
nepi_env/setup/: nepi_config.sh  nepi_config_nepi-3p1p0.sh  nepi_config_nepi-3p2p0.sh  requirements.txt  requirements_python3p10p18.txt
nepi_env/srv/: NepiDataDir.srv
nepi_env/utilities/: create_python_requirements_files.sh  generate_ros_api_tables.py  get_remote_numurus_sdk_archive.sh  install_complete_numurus_package.sh  nepi_clear.sh  prepare_filesystem_for_image_archive.sh
nepi_interfaces/: CMakeLists.txt
nepi_interfaces/msg/: AiDetectorStatus.msg  DataIntensityMap.msg  DataNavPose.msg  DataPointcloud.msg  DevicePTXStatus.msg  MgrNetworkStatus.msg  NavPoseOffset.msg  NavPoseTrack.msg  SerialDevice.msg  TargetData.msg  TargetInfo.msg
nepi_interfaces/srv/: WifiQuery.srv
nepi_managers/: CMakeLists.txt  package.xml  setup.py  system_mgr.py
nepi_managers/api/: connect_mgr_if_ai_model.py  connect_mgr_if_automation.py  connect_mgr_if_config.py  connect_mgr_if_nav_pose.py  connect_mgr_if_navpose.py  connect_mgr_if_system.py  connect_mgr_if_time.py  connect_mgr_if_time_sync.py
nepi_managers/etc/: network_mgr.yaml  scripts_mgr.yaml  software_mgr.yaml  system_mgr.yaml
nepi_managers/include/: nav_pose_mgr.h
nepi_managers/params/: ai_models_mgr_params.yaml  apps_mgr_params.yaml  drivers_mgr_params.yaml  navpose_mgr_params.yaml  network_mgr_params.yaml  scripts_mgr_params.yaml  software_mgr_params.yaml  time_mgr_params.yaml
nepi_managers/scripts/: ai_detector_mgr.py  ai_model_mgr.py  ai_models_mgr.py  apps_mgr.py  automation_mgr.py  config_mgr.py  drivers_mgr.py  nav_pose_mgr.py  nav_pose_pub.py  navpose_mgr.py  network_mgr.py  rui_config_mgr.py  scripts_mgr.py  software_mgr.py  system_mgr.py  target_mgr.py  targets_mgr.py  time_mgr.py  time_sync_mgr.py
nepi_managers/src/: nav_pose_mgr.cpp
nepi_ros_interfaces/: CMakeLists.txt  README.md  package.xml
nepi_ros_interfaces/msg/: AiDetectorInfo.msg  AiDetectorStatus.msg  AiDetectorsStatus.msg  AiMgrStatus.msg  AiModelInfo.msg  AiModelMgrStatus.msg  AiModelsInfo.msg  BoundingBoxes.msg  DataControlsDepthMap.msg  DataControlsImage.msg  DataControlsPointcloud.msg  DataControlsSonar.msg  DataDepthMap.msg  DataImage.msg  DataNavPose.msg  DataPointcloud.msg  DepthMapStatus.msg  DeviceRBXStatus.msg  DriverStatus.msg  DriversStatus.msg  Elevation.msg  Frame3DTransform.msg  Frame3DTransformStatus.msg  IDXControls.msg  IDXStatus.msg  ImageClassifierStatus.msg  ImageMuxInput.msg  ImageStatus.msg  ImageWindow.msg  LSXStatus.msg  NPXStatus.msg  NavPoseData.msg  NavPoseDataStatus.msg  NavPoseMgrCompInfo.msg  NavPoseMgrStatus.msg  NavPoseSolutionStatus.msg  NavPoseStatus.msg  NavPoseTrack.msg  PTXStatus.msg  PanTiltOffsets.msg  (+20 more)
nepi_ros_interfaces/srv/: AiDetectorInfoQuery.srv  IDXCapabilitiesQuery.srv  ImageCapabilitiesQuery.srv  NEPILinkStatusQuery.srv  NPXCapabilitiesQuery.srv  NavPoseCapabilitiesQuery.srv  NavPoseDataQuery.srv  NavPoseQuery.srv  NavPoseStatusQuery.srv  PTXCapabilitiesQuery.srv  SaveDataCapabilitiesQuery.srv  SettingsCapabilitiesQuery.srv  SystemDefsQuery.srv  SystemStatesQuery.srv  SystemStatusQuery.srv  SystemTriggersQuery.srv  TimeStatusQuery.srv
nepi_rui/: CMakeLists.txt
nepi_sdk/: CMakeLists.txt  README.md  package.xml  setup.py
nepi_sdk/ifs/: ai_detection_if.py  ai_detector_if.py  mgr_if_ai_model.py  mgr_if_system.py
nepi_sdk/include/: colormaps.h  sdk_interface.h  sdk_node.h  sdk_utils.h
nepi_sdk/scripts/: automation_script_template.py  check_for_serial_device.py  create_txt_from_xml_labels_script.py  dtz_test.py  image_color_converter.py  navpose_convert_yaml_files.py  nepi_ai_detection_image_node.py  nepi_ai_detector_img_pub_node.py  network_tests  partition_ai_training_data_script.py  remove_currupt_image_files_script.py  rename_xml_label_script.py  replace_key_value_helper_script.py  replace_strings_helper_script.py  start_stop_scripts_helper_script.py  zed_cal_file_backup_restore.py
nepi_sdk/sdk/: nepi_ais.py  nepi_apps.py  nepi_pc.py  nepi_ros.py  nepi_save.py  nepi_settings.py
nepi_sdk/src/: save_data_interface.cpp  sdk_interface.cpp  sdk_node.cpp  sdk_utils.cpp
nepi_sdk/src/algorithms/: approx_moving_avg.cpp  build_test_apps.sh
nepi_sdk/src/nepi_sdk/: ai_detection_if.py  ai_detector_if.py  ai_manager_if.py  ai_node_if.py  device_if_idx.py  device_if_lsx.py  device_if_ptx.py  device_if_rbx.py  image_if.py  nepi_aifs.py  nepi_ais.py  nepi_apps.py  nepi_auto.py  nepi_cfg.py  nepi_controls.py  nepi_detections.py  nepi_devices.py  nepi_docker.py  nepi_drv.py  nepi_drvs.py  nepi_img.py  nepi_installs.py  nepi_keys.py  nepi_lines.py  nepi_mgrs.py  nepi_mmap.py  nepi_modbus.py  nepi_msg.py  nepi_nav.py  nepi_pc.py  nepi_predict.py  nepi_pt_stab.py  nepi_rbx.py  nepi_ros.py  nepi_save.py  nepi_sdk.py  nepi_serial.py  nepi_settings.py  nepi_software.py  nepi_software_update_utils.py  (+15 more)
nepi_sdk/tools/: .standard_time_zones.csv.swp  check_for_serial_device.py  class_test.py  filename converter.py  navpose_convert_yaml_files.py  nepi_storage (192.168.179.103).lnk  network_tests  start_stop_scripts_helper_script.py  zed_cal_file_backup_restore.py
(+170 files in other folders)
